--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -41,6 +41,6 @@
 @mixin buttonCard($padding){
     padding: $padding;
     background: $white;
-    border: $sp-1 solid $borderGrey;
-    border-radius: $sp-5;
+    border: $sp-2 solid $borderGrey;
+    border-radius: $sp-4;
 }
